--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -235,8 +235,8 @@
 }
 .winButton-iRh8-Z {color:#ffffff; transform: scale(1) };
 .titleBar-AC4pGV > *:nth-child(2):hover {background-color: #E81123; color: #fff;}
-.titleBar-AC4pGV > *:nth-child(3):hover {background-color: #52548b; color: #fff}
-.titleBar-AC4pGV > *:nth-child(4):hover {background-color: #50528a; color: #fff}
+.titleBar-AC4pGV > *:nth-child(3):hover {backdrop-filter: brightness(40%); color: #fff}
+.titleBar-AC4pGV > *:nth-child(4):hover {backdrop-filter: brightness(40%); color: #fff}
 .withFrame-haYltI {
   padding-top: 10px;
   height: 0px;
@@ -352,10 +352,13 @@
    right: 170px;
    -webkit-app-region: no-drag;
  }
+ .button-14-BFJ:hover {
+   color: #fff !important;
+ }
 
 path[d="M19.738 10H22V14H19.739C19.498 14.931 19.1 15.798 18.565 16.564L20 18L18 20L16.565 18.564C15.797 19.099 14.932 19.498 14 19.738V22H10V19.738C9.069 19.498 8.203 19.099 7.436 18.564L6 20L4 18L5.436 16.564C4.901 15.799 4.502 14.932 4.262 14H2V10H4.262C4.502 9.068 4.9 8.202 5.436 7.436L4 6L6 4L7.436 5.436C8.202 4.9 9.068 4.502 10 4.262V2H14V4.261C14.932 4.502 15.797 4.9 16.565 5.435L18 3.999L20 5.999L18.564 7.436C19.099 8.202 19.498 9.069 19.738 10ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"]{
    d: path("M7 12.001C7 10.8964 6.10457 10.001 5 10.001C3.89543 10.001 3 10.8964 3 12.001C3 13.1055 3.89543 14.001 5 14.001C6.10457 14.001 7 13.1055 7 12.001ZM14 12.001C14 10.8964 13.1046 10.001 12 10.001C10.8954 10.001 10 10.8964 10 12.001C10 13.1055 10.8954 14.001 12 14.001C13.1046 14.001 14 13.1055 14 12.001ZM19 10.001C20.1046 10.001 21 10.8964 21 12.001C21 13.1055 20.1046 14.001 19 14.001C17.8954 14.001 17 13.1055 17 12.001C17 10.8964 17.8954 10.001 19 10.001Z");
-   color: #fff !important;
+   color: rgb(218, 218, 218) !important;
 }
 
 
@@ -455,3 +458,37 @@ border-top:0;
 
 
 
+
+ .scrollableContainer-2NUZem {
+    box-shadow: 0px 2px var(--alt-color2);
+    border-radius: 2px;
+ }
+ .channelTextArea-rNsIhG {
+    margin-bottom: 40px;
+ }
+
+.button-38aScr[aria-label="Send a gift"] {
+   bottom: 2px;
+   left: 385px;
+   transform: scale(0.85);
+   position: fixed;
+}
+.button-38aScr[aria-label="Select emoji"] {
+   bottom: 5px;
+   left: 414px;;
+   transform: scale(0.85);
+   position: fixed;
+}
+[aria-label="Open sticker picker"] {
+   bottom: 3px;
+   left: 360px;
+   transform: scale(0.85);
+   position: fixed;
+}
+
+[aria-label="Open GIF picker"] {
+   bottom: 1px;
+   left: 328px;
+   transform: scale(0.85);
+   position: fixed;
+}
