--- a/source/support/betterdiscord/MicrosftsoftTeams.theme.css
+++ b/source/support/betterdiscord/MicrosftsoftTeams.theme.css
@@ -4,7 +4,7 @@
  * @version 0.0.7
  * @description (ALPHA)
  * @source https://github.com/leeprky/MicrosoftTeams
- * @updateUrl 
+ * @updateUrl https://raw.githubusercontent.com/leeprky/MicrosoftTeams/main/source/support/betterdiscord/MicrosftsoftTeams.theme.css
  * @authorId 224524143482241035
  * @invite Ff3rqAYB89
  * @donate https://www.paypal.com/paypalme/leeparkinson22
