--- a/source/support/betterdiscord/MicrosftsoftTeams.theme.css
+++ b/source/support/betterdiscord/MicrosftsoftTeams.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name MicrosoftTeams
  * @author Leeprky#2063
- * @version 0.0.7
+ * @version 0.0.8
  * @description (ALPHA)
  * @source https://github.com/leeprky/MicrosoftTeams
  * @updateUrl https://raw.githubusercontent.com/leeprky/MicrosoftTeams/main/source/support/betterdiscord/MicrosftsoftTeams.theme.css
@@ -10,11 +10,9 @@
  * @donate https://www.paypal.com/paypalme/leeparkinson22
  * @website https://leeprky.github.io/
 */
-
 /* MS Teams Theme - Dev */
 @import "https://leeprky.github.io/themes/MicrosoftTeams/master-import.css";
-@import url('https://snappercord.github.io/Settings-Icons/source.css');
-:root {--outdated_msteams-003: none !important; --version: "0.0.7 (ALPHA)" !important; --build: "003" !important}
+@import url('https://snappercord.github.io/Settings-Icons/source.css');:root {--outdated_msteams-004: none !important; --version: "0.0.8 (ALPHA)" !important; --build: "004" !important}
 
 :root {
 
@@ -66,6 +64,12 @@
     --settings-alt-focused: white;
     --settings-guild-premium: #7289da;
     --settings-guild-delete: var(--red);
+
+    --user-modal-avatar-size: 230px;
+    --blur-the-things: 0;
+    --premium-size: 480px;
+    --premium-opacity: .13;
+    --premium-blur: blur(1.2px)
 }
    
    .theme-dark {
@@ -105,6 +109,12 @@
        --background-tertiary: #171717 ;
        --background-accent: var(--alt-color2) ;
        --background-floating: #161616 ;
+
+       --indicator-connected: 108, 95, 135;
+       --indicator-hovered: rgba(var(--alt-color), 0.2);
+       --indicator-unread: 255, 255, 255;
+       --indicator-selected: var(--alt-color);
+       --indicator-rounding: 3px !important;
       
        /* Mentioned  Colours */
        --background-mentioned: rgba(var(--alt-color), 0.1) ;
@@ -141,8 +151,8 @@
     
       --channeltextarea-background: var(--background-secondary);
      
-      --alt-color: 98, 100, 167;
-      --alt-color2: #6264A7 ;
+      --alt-color: 118, 120, 187;
+      --alt-color2: #6e71bb ;
       --alt-color3: 238 ;/* HSL */
       
       --playing-color: var(--alt-color2) ;
@@ -156,9 +166,9 @@
      
        /* Text Colours */
        --text-normal: #3E3E3E ;
-       --text-muted: #949494 ;
+       --text-muted: #252525 ;
        --text-link: var(--alt-color2) ;
-       --channels-default: #000000 ;
+       --channels-default: #2e2e2e ;
        --interactive-normal: #555555 ;
        --interactive-hover: var(--alt-color2) ;
        --interactive-hover-icons: var(--alt-color2) ;
@@ -174,6 +184,12 @@
      --background-tertiary: rgba(253, 251, 251, 0.979); 
      --background-accent: var(--alt-color2) ; 
      --background-floating: #ffffff ; 
+
+     --indicator-connected: 108, 95, 135;
+     --indicator-hovered: rgba(var(--alt-color), 0.1);
+     --indicator-unread: 255, 255, 255;
+     --indicator-selected: var(--alt-color);
+     --indicator-rounding: 3px !important;
       
        /* Mentioned  Colours */
        --background-mentioned: #fcfcfc ; 
