--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -2,8 +2,6 @@
 @import "https://leeprky.github.io/themes/MicrosoftTeams/master-import.css";
 @import url('https://snappercord.github.io/Settings-Icons/source.css');
 
-:root {--outdated_msteams-005: none !important; --version: "0.0.9 (ALPHA)" !important; --build: "005" !important}
-
 :root {
 
     /* Gradients */
@@ -28,7 +26,7 @@
     --button-hover-transform: scale(1.03);
 
     --settings-icon-color: var(--alt-color2);
-    --settings-subscriptions: #7289da;
+    --settings-subscriptions: var(--alt-color2);
     --settings-hypesquad: #fbb848;
     --settings-logout: #f04747;
  
@@ -44,6 +42,7 @@
     /* Status Colours */
     --purple: #464775;
     --red: #B1273E;
+    --call-button-red: #AF243D;
     --yellow: #FDB913;
     --green: #92C353;
 
@@ -67,7 +66,7 @@
       --channeltextarea-background: var(--background-secondary);
    
       --alt-color: 70, 71, 117;
-      --alt-color2: #464775 ;
+      --alt-color2: #464775;
       --alt-color3: 239 ;/* HSL */
       
       --playing-color: var(--alt-color2) ;
@@ -93,7 +92,7 @@
        --interactive-muted: #585858 ;
       
        /* Background Colours */
-       --background-primary: #1F1F1F ;
+       --background-primary: #1f1f1f ;
        --background-primary-alt: #111111 ;
        --background-secondary: #141414 ;
        --background-secondary-alt: #0a0a0a;
@@ -136,6 +135,7 @@
           
       /* Other */
       --radio-group-dot-foreground: var(--alt-color) ;
+      --text-positive: var(--green-color) !important;
       }
    
     .theme-light {
@@ -212,4 +212,7 @@
           
       /* Other */
       --radio-group-dot-foreground: var(--alt-color2) ;/* Ignore */
+      --text-positive: var(--green-color) !important;
       }
+
+:root {--outdated_msteams-005: none !important; --version: "0.0.9 (ALPHA)" !important; --build: "005" !important}
